--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:tailwind": "tailwind build -i src/style.css -o public/style.css"
+    "build": "postcss ./src/style.css -o ./public/style.css --watch",
+    "build:tailwind": "npx tailwindcss -i ./src/style.css -o ./public/style.css --watch"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,10 @@
   "homepage": "https://github.com/WNBARookie/Recipe-Page#readme",
   "devDependencies": {
     "tailwindcss": "^3.0.8"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.1",
+    "postcss-cli": "^9.1.0",
+    "watch": "^1.0.2"
   }
 }
